fixes and adjustments(read description)
- hero text too big on phone
- button border style overwritten on iphone-devices
- breadcrumb text to big and to much margin
- size selector style overwritten on iphone-devices
- about us page to much margin on section headers

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -15,9 +15,12 @@ section {
   text-align: center;
 }
 
+h2, h3 {
+  margin-block: 2rem 0.5rem;
+}
+
 h2 {
   color: var(--light_orange);
-  margin-top: 80px;
 }
 
 h3 {
@@ -30,6 +33,10 @@ p {font-family: Verdana, Geneva, Tahoma, sans-serif;}
 article {
   display: flex;
   flex-flow: column;
+}
+
+article > * {
+  padding-block: 1.5rem;
 }
 
 .middle_section {
