--- a/css/category.css
+++ b/css/category.css
@@ -1,4 +1,3 @@
-h1 {margin: 5rem 10px 1rem;}
 h2 {margin: auto 0 auto 20px;}
 h3 {font-size: var(--medium3);}
 
