--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -1,7 +1,6 @@
 h1 {
   text-align: center;
-  font-size: clamp(35px, 4vw, 60px);
-  margin: 2em 0 4%;
+  font-size: var(--large2);
 }
 
 h2 {
