--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,4 @@
-/* backgroundimage on main site- may or may not use it */
-
 body {
-  /* background: url(../Assets/images//background-mountains@2x-mountain_green.png) no-repeat fixed bottom;
-  background-size: auto 30%; */
   background-color: var(--light_green);
 }
 
@@ -11,18 +7,22 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-size: clamp(24px, 5vw, 80px);
+  font-size: clamp(20px, 5vw, 60px);
   color: var(--charcoal);
   font-family: open sans;
   text-transform: uppercase;
 }
 
-h3 {font-size: var(--medium3);}
+h3 {font-size: var(--medium2);}
 h4 {font-size: var(--small);}
 
 /* hero */
 .hero {
   position: relative;
+
+  max-width: 1000px;
+  margin-inline: auto;
+  
   width: 100%;
   height: fit-content;
   background: url(../Assets/images/img_hero_resized.jpg) no-repeat right;
@@ -58,8 +58,7 @@ h4 {font-size: var(--small);}
 .featured_products h2 {
   background: var(--charcoal);
   color: white;
-  padding: 20px;
-  font-size: 2em;
+  padding: 1em;
   grid-column: 1 / -1;
   margin-top: 30px;
 }
@@ -134,4 +133,7 @@ h4 {font-size: var(--small);}
   font-size: clamp(12px, 4.5vw, 38px);
   align-self: center;
 }
+
+
 /* [end] main */
+
