--- a/css/mycart.css
+++ b/css/mycart.css
@@ -1,5 +1,5 @@
 main {
-  margin-block: 2rem; 
+  margin-bottom: 2rem; 
 }
 
 h2 {
